--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,18 @@ p {
 
 }
 
+#title {
+    font-size: 2rem;
+}
+
+#timora-logo {
+    height: 12rem;
+    width: 12rem;
+    box-shadow: 0px 4px 8px rgba(256, 256, 256, 0.1);
+    border-radius: 2.2rem;
+}
+
 #quote {
     color: #ababab;
+    font-size: 2rem;
 }
