--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 * {
-
+    margin: 0;
+    padding: 0;
 }
 
 body, html {
@@ -10,10 +11,19 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
+    background-color: #fff;
+    transition: background-color 1s ease-in-out;
 }
 
-p {
-
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .container {
@@ -25,17 +35,54 @@ p {
 }
 
 #title {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 #timora-logo {
-    height: 12rem;
-    width: 12rem;
-    box-shadow: 0px 0px 12px rgba(256, 256, 256, 0.1);
-    border-radius: 2.2rem;
+    margin-bottom: 36px;
+    height: 18rem;
+    width: 18rem;
+    box-shadow: 0px 0px 24px rgba(256, 256, 256, 0.05);
+    border-radius: 3.3rem;
 }
 
 #quote {
+    font-size: 4rem;
+    background: linear-gradient(90deg, #ebebeb, #ababab);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: scale 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+#quote:hover {
+    scale: 0.95;
+    opacity: 0.7;
+}
+
+#quote:active{
+    opacity: 0.4;
+}
+
+.gradient-text {
+    font-size: 4.5rem;
+    font-weight: bold;
+    margin-top: 36px;
+    text-align: center;
+    background: linear-gradient(90deg, #ebebeb, #ababab);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.start-text {
     color: #ababab;
-    font-size: 2rem;
+    margin-top: 0;
+    font-weight: medium;
+    margin-top: 32px;
+    font-size: 1.3rem;
+}
+
+.get-started {
+    margin-top: 15px;
+    background: none;
+    border: none;
 }
