--- a/styles/create-account.css
+++ b/styles/create-account.css
@@ -86,10 +86,44 @@ transition: box-shadow 0.3s ease-in-out, opacity 0.3s;
     font-size: 1rem;
     cursor: pointer;
     transition: scale 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(8px);
 }
 
 .continue:hover {
     scale: 0.95;
     opacity: 0.8;
+}
+
+.or {
+    color: #ababab;
+    margin: 12px;
+}
+
+.google,
+.apple {
+    background-color: #2e2e2e;
+    border: none;
+    padding: 16px;
+    margin-left: 4px;
+    margin-right:4px;
+    border-radius: 6px;
+    backdrop-filter: blur(8px);
+    transition: scale 0.3s ease-in-out, opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.google:hover,
+.apple:hover {
+    scale: 0.95;
+    box-shadow: 0 0 16px rgba(255, 255, 255, 0.2);
+}
+
+.google:active,
+.apple:active {
+    opacity: 0.7;
+}
+
+.google-logo,
+.apple-logo {
+    height: 24px;
+    width: 24px;
 }
