--- a/styles/create-account.css
+++ b/styles/create-account.css
@@ -42,6 +42,7 @@ body, html {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 2rem;
+    margin-bottom: 4px;
 }
 
 #timora-logo {
@@ -80,6 +81,11 @@ transition: box-shadow 0.3s ease-in-out, opacity 0.3s;
     box-shadow: 0 0 16px rgba(255, 255, 255, 0.4);
 }
 
+.condition {
+    color: #ababab;
+    margin-top: 12px;
+}
+
 .continue {
     margin-top: 16px;
     border: none;
@@ -101,6 +107,10 @@ transition: box-shadow 0.3s ease-in-out, opacity 0.3s;
     opacity: 0.8;
 }
 
+.continue:disabled {
+    opacity: 0.8;
+}
+
 .or {
     color: #ababab;
     margin: 12px;
@@ -116,6 +126,7 @@ transition: box-shadow 0.3s ease-in-out, opacity 0.3s;
     border-radius: 6px;
     backdrop-filter: blur(8px);
     transition: scale 0.3s ease-in-out, opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .google:hover,
@@ -133,4 +144,21 @@ transition: box-shadow 0.3s ease-in-out, opacity 0.3s;
 .apple-logo {
     height: 24px;
     width: 24px;
+}
+
+.go-back {
+    margin-top: 24px;
+    color: #ababab;
+    text-decoration: underline;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.go-back:hover {
+    color: #8c8c8c;
+}
+
+.go-back:active {
+    opacity: 0.7;
 }
