--- a/styles/home.css
+++ b/styles/home.css
@@ -104,7 +104,6 @@ body, html {
 .footer-item {
     flex: 1;
     text-align: center;
-    color: #ebebeb;
     font-size: 13px;
     font-weight: bold;
     text-decoration: none;
@@ -112,6 +111,16 @@ body, html {
     flex-direction: column;
     align-items: center;
     gap: 4px;
+}
+
+#home {
+    color: #ebebeb;
+}
+
+#quotes,
+#account,
+#settings {
+    color: #ababab;
 }
 
 .footer-icon {
