--- a/styles/home.css
+++ b/styles/home.css
@@ -56,7 +56,7 @@ body, html {
     color: #ababab;
     margin-top: 96px;
     font-size: 22px;
-    font-weight: 300;
+    font-weight: light;
 }
 
 .timer {
@@ -91,14 +91,12 @@ body, html {
     left: 0;
     width: 100%;
     height: 60px;
-    background-color: rgba(red, green, blue, 0);
     display: flex;
     justify-content: space-around;
     align-items: center;
     z-index: 1000;
     padding: 0 10px;
-    margin-top: 64px;
-    margin-bottom: 8px;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .footer-item {
@@ -111,21 +109,22 @@ body, html {
     flex-direction: column;
     align-items: center;
     gap: 4px;
+    color: #ababab; /* Default text color */
+    transition: color 0.3s ease-in-out;
 }
 
-#home {
+.footer-item:hover {
+    color: #ebebeb; /* Text color on hover */
+}
+
+.home-text {
     color: #ebebeb;
-}
-
-#quotes,
-#account,
-#settings {
-    color: #ababab;
 }
 
 .footer-icon {
     width: 24px;
     height: 24px;
+    transition: opacity 0.5s ease-in-out; /* Smooth icon transition */
 }
 
 /* NEXT GOAL: MAKE EACH ICON EXCEPT HOME #ABABAB INCLUDING THE TEXT. THE COLOR WILL BE #EBEBEB FOR EACH PAGE. LASTLY, CORRECT THE PROXIMITY BETWEEN THE START WORK BUTTON AND FOOTER. */
