--- a/styles/home.css
+++ b/styles/home.css
@@ -138,8 +138,4 @@ body, html {
     transition: opacity 0.5s ease-in-out; /* Smooth icon transition */
 }
 
-/* NEXT GOAL: MAKE EACH ICON EXCEPT HOME #ABABAB INCLUDING THE TEXT. THE COLOR WILL BE #EBEBEB FOR EACH PAGE. LASTLY, CORRECT THE PROXIMITY BETWEEN THE START WORK BUTTON AND FOOTER. */
-
-/* JAVASCRIPT: START THE LOGIC OF POMODORO. */
-
-/* LOCALSTORAGE:. TAKE A LOOK AT TRY.HTML TO UNDERSTAND BASIC LOCALSTORAGE BACKEND USAGE. */
+/* LOCALSTORAGE: TAKE A LOOK AT TRY.HTML TO UNDERSTAND BASIC LOCALSTORAGE BACKEND USAGE. */
