--- a/styles/home.css
+++ b/styles/home.css
@@ -140,4 +140,4 @@ body, html {
 
 /* LOCALSTORAGE: TAKE A LOOK AT TRY.HTML TO UNDERSTAND BASIC LOCALSTORAGE BACKEND USAGE. */
 
-/* LONG-TERM GOALS: START LEARNING BACKEND! */
+/* LONG-TERM GOALS: START LEARNING BACKEND! ALSO, TRY TO APPLY FRAMEWORKS SUCH AS TAILWIND OR REACT. LASTLY, UTILIZE FROM TYPESCRIPT! */
