--- a/styles/home.css
+++ b/styles/home.css
@@ -139,3 +139,5 @@ body, html {
 }
 
 /* LOCALSTORAGE: TAKE A LOOK AT TRY.HTML TO UNDERSTAND BASIC LOCALSTORAGE BACKEND USAGE. */
+
+/* LONG-TERM GOALS: START LEARNING BACKEND! */
