--- a/styles/task.css
+++ b/styles/task.css
@@ -9,6 +9,12 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+	    animation: fadeIn 1s forwards;
+			background-color: #fff;
+}
+
 .container {
     position: relative;
     width: 100%;
